k8s/istio/istio-virtualsvc.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
  namespace: nginx-test
spec:
  hosts:
  - "*"
  gateways:
  - nginx-test/nginx-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx
        port:
          number: 80
